# fomina.shop

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yaml  CI.yml  backend.yaml  ci.yaml  frontend.yaml
alembic/: env.py
alembic/versions/: 1efc78167598_initial_tables.py  37f41805de3a_update_order.py  46622e7befc4_add_price_markup_to_productvariation.py  9c6623bed51a_add_order.py  b60accbfe77c_add_payment.py  c12c569bf029_add_productimage.py  c2af1a6e1af4_add_position_order_fields.py  d677d0c69f7d_add_updated_at_to_models.py  f84f27813da6_update_variations_relation.py
api/: .gitignore  Dockerfile  README.md  __init__.py  admin.py  alembic.ini  client.py  docker-entrypoint.sh  env.py  models.py  pyproject.toml  services.py  storage.py
api/alembic/: env.py
api/alembic/versions/: 067791fc102e_add_productvariations.py  15c33a70af0b_productimage_description_nullable.py  56155a7cd38d_update_productimage.py  6e950a7acb1a_change_product_category_relationship.py  8b125733eae6_add_category_image.py  907bf646e78f_add_original_url_for_productimage.py  909518ec4681_update_order.py  a1aef3928b34_change_productvariation_key_to_enum.py  ce56b26438b5_update_productimage.py  d1538dd92edb_change_product_description_to_text.py  dc1a76b3cf44_change_order_m2m_to_products.py
api/database/: __init__.py  models.py  repository.py
api/database/repositories/: abc.py  category.py  image.py  product.py
api/handlers/: __init__.py  categories.py  products.py
api/routers/: __init__.py  categories.py  delivery.py  images.py  orders.py  payments.py  payments_daemon.py  products.py  variations.py
api/sdek/: __init__.py  calculator.py  client.py  http_client.py  models.py
api/services/admin/: auth.py  views.py
api/services/db/: categories.py  images.py  models.py  orders.py  payments.py  products.py  variations.py
api/services/sdek/: __init__.py  cities.py  delivery.py  offices.py  regions.py
api/services/telegram/: notifications.py
api/services/yookassa/: __init__.py  models.py  payments.py
api/src/: __init__.py  client.py  env.py
api/src/database/: models.py  repository.py
api/src/database/repositories/: abc.py  category.py  order.py  order_association.py  payment.py  product.py  product_variation.py
api/src/handlers/: __init__.py  categories.py  files.py  notifications.py  orders.py  product_variation.py  products.py
api/src/services/: pay.py  telegram.py
api/src/services/admin/: views.py
api/src/storage/: images.py
migrations/: env.py
migrations/versions/: 0862b9320ecd_category_add_is_coming.py  1ee94fafaa73_add_product.py  2e47193bbe9f_product_add_article.py  46de8c52c1ed_add_product_variation.py  52b0a03d3d76_add_image_table.py  540bd2625ab7_add_order.py  62325545bf8a_product_add_price.py  888f058f4b33_category_make_slug_unique.py  8adab4843269_add_category_table.py  92347f056b08_add_payment.py  c099540a9976_order_make_phone_is_bigint.py  c68f797b3f74_order_m2m_add_cascade.py  d77d638b1650_category_add_image_path.py
nginx/: api.fomina.shop  fomina.shop
sdek/: delivery_points.py  http_client.py
src/: client.py  env.py
src/handlers/: __init__.py  files.py
src/services/: pay.py  telegram.py
ui/: .eslintrc.cjs  .prettierignore  .prettierrc.json  Dockerfile  README.md  app.config.ts  biome.json  bun.lockb  docker-entrypoint.sh  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+234 files in other folders)
