[tool.poetry]
name = "fomina-pw"
version = "0.1.0"
description = ""
authors = ["VodoGamer <vodogamer@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
hypercorn = "^0.14.4"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.0"
black = "^23.7.0"
ruff = "^0.0.278"
pyright = "^1.1.317"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.ruff]
select = ["I", "E", "F", "B", "Q"]
exclude = ["migrations"]
line-length = 99
target-version = "py310"

[tool.pyright]
exclude = ["migrations", ".venv"]
pythonVersion = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
