[tool.poetry]
name = "fomina-pw"
version = "0.1.0"
description = ""
authors = ["VodoGamer <vodogamer@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.19" }
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
sqladmin = "^0.13.0"
fastapi-storages = "^0.2.0"
itsdangerous = "^2.1.2"
uvicorn = "^0.23.0"
pre-commit = "^3.3.3"
aiohttp = "^3.8.5"
ujson = "^5.8.0"
pydantic = "^2.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
pyright = "^1.1.317"
pre-commit = "^3.3.3"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.ruff]
select = ["I", "E", "F", "B", "Q"]
exclude = ["migrations"]
line-length = 99
target-version = "py310"

[tool.pyright]
exclude = ["migrations", ".venv"]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
